<resources>
    <string name="app_name">Smart Elevator Manager App</string>

    <string name="eleid_str">Ele. ID</string>
    <string name="elename_str">Name</string>
    <string name="eleinstall_str">Location</string>
    <string name="elestate_str">Ele. State</string>

    <string name="maintenance_title">Maintenance Statement</string>
    <string name="date_title">Date</string>
    <string name="worker_title">Name</string>
    <string name="maintenance_state_title">Statement</string>

    <string name="ok_str">Done</string>
    <string name="cancel_str">Cancel</string>

    <string name="db_name">ElevatorDB</string>

    <string name="urlBase">http://boas.asuscomm.com:10002/</string>

    <string name="wifiap_ip">210.119.145.6</string>
    <string name="wifiap_port">12345</string>

    <string name="statement_good">Maintenance Statement Upload : Success!!</string>
    <string name="statement_bad">Maintenance Statement Upload : Fail!!</string>

</resources>