<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp">

    <TextView
        android:id="@+id/eleid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_weight="1"
        android:text="@string/eleid_str"
        android:textAlignment="center"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/elename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_weight="2"
        android:text="@string/elename_str"
        android:textAlignment="center"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/elelocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_weight="1"
        android:text="@string/eleinstall_str"
        android:textAlignment="textStart"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/elestate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_weight="1"
        android:background="@color/list_header"
        android:text="@string/elestate_str"
        android:textAlignment="center"
        android:textSize="22sp"
        android:visibility="gone" />


</LinearLayout>